--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 header {
   position: sticky;
   top: 0;
-  background-color: #333;
+  background-color: #BA487F;
   color: white;
   padding: 10px 0;
   z-index: 1000;
